--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -177,8 +177,8 @@ jobs:
 
     - name: Set up database
       run: |
-        bundle exec rake db:create db:schema:load --trace
-        bundle exec rake db:seed_fu --trace
+        bundle exec rake db:create
+        bundle exec rake db:migrate
 
     - name: MYSQL - Grant all privileges to rails user
       run: |
