--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,17 +24,6 @@ jobs:
       matrix:
         experimental: [false]
         ruby: ["2.7", "3.0", "3.1", "3.2"]
-        include:
-          - ruby: head
-            experimental: true
-          - ruby: jruby
-            experimental: true
-          - ruby: jruby-head
-            experimental: true
-          - ruby: truffleruby
-            experimental: true
-          - ruby: truffleruby-head
-            experimental: true
     services:
       mysql:
         image: mysql:latest
@@ -57,77 +46,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-
-    - name: Install dependencies
-      run: |
-        codename="$(. /etc/os-release; x="${VERSION_CODENAME-${VERSION#*(}}"; echo "${x%%[ )]*}")"
-        if ! which gpg || ! which curl; then \
-          apt-get update \
-          && apt-get install -y --no-install-recommends \
-              gnupg curl; \
-        fi
-        # Postgres apt sources
-        sudo curl -sS https://www.postgresql.org/media/keys/ACCC4CF8.asc | APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE=1 sudo apt-key add -
-        sudo add-apt-repository "deb http://apt.postgresql.org/pub/repos/apt/ ${codename}-pgdg main"
-        # Node apt sources
-        sudo  curl -sS https://deb.nodesource.com/gpgkey/nodesource.gpg.key | APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE=1 sudo apt-key add -
-        sudo add-apt-repository "deb http://deb.nodesource.com/node_18.x ${codename} main"
-        # Yarn apt sources
-        sudo curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE=1 sudo apt-key add -
-        sudo add-apt-repository "deb http://dl.yarnpkg.com/debian/ stable main"
-        # Install dependencies
-        sudo apt-get install -y --no-install-recommends \
-        autoconf \
-        automake \
-        bzip2 \
-        dpkg-dev \
-        file \
-        g++ \
-        gcc \
-        imagemagick \
-        libbz2-dev \
-        libc6-dev \
-        libcurl4-openssl-dev \
-        libdb-dev \
-        libevent-dev \
-        libffi-dev \
-        libgdbm-dev \
-        libgeoip-dev \
-        libglib2.0-dev \
-        libjpeg-dev \
-        libkrb5-dev \
-        liblzma-dev \
-        libmagickcore-dev \
-        libmagickwand-dev \
-        libncurses5-dev \
-        libncursesw5-dev \
-        libpng-dev \
-        libpq-dev \
-        libreadline-dev \
-        libsqlite3-dev \
-        libssl-dev \
-        libtool \
-        libvips-dev \
-        libwebp-dev \
-        libxml2-dev \
-        libxslt-dev \
-        libyaml-dev \
-        make \
-        patch \
-        unzip \
-        xz-utils \
-        zlib1g-dev \
-        imagemagick \
-        postgresql-client-15 \
-        libmysqlclient-dev \
-        default-mysql-client \
-        sqlite3 \
-        nodejs \
-        yarn \
-        ffmpeg \
-        mupdf \
-        mupdf-tools \
-        poppler-utils
 
     - name: Set up Memcached
       uses: niden/actions-memcached@v7
@@ -174,22 +92,12 @@ jobs:
 
     - name: Install bundler dependencies
       run: bundle config unset deployment && bundle install --jobs 4 --retry 3
+      timeout-minutes: 3
 
     - name: Set up database
       run: |
         bundle exec rake db:create
         bundle exec rake db:migrate
-
-    - name: MYSQL - Grant all privileges to rails user
-      run: |
-        mysql -h 127.0.0.1 -P 3306 -u root -e "
-          create user 'rails'@'%';
-          grant all privileges on activerecord_unittest.* to rails@'%';
-          grant all privileges on activerecord_unittest2.* to rails@'%';
-          grant all privileges on inexistent_activerecord_unittest.* to rails@'%';
-          create database activerecord_unittest default character set utf8mb4;
-          create database activerecord_unittest2 default character set utf8mb4;
-        "
 
   actioncable:
     needs: build
