--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,17 @@ jobs:
       matrix:
         experimental: [false]
         ruby: ["2.7", "3.0", "3.1", "3.2"]
+        include:
+          - ruby: head
+            experimental: true
+          - ruby: jruby
+            experimental: true
+          - ruby: jruby-head
+            experimental: true
+          - ruby: truffleruby
+            experimental: true
+          - ruby: truffleruby-head
+            experimental: true
     services:
       mysql:
         image: mysql:latest
@@ -120,6 +131,7 @@ jobs:
             experimental: true
     steps:
       - name: Action cable Test
+        if: ${{ job.status == 'success' }}
         run: |
           echo "Action cable"
 
@@ -144,5 +156,6 @@ jobs:
             experimental: true
     steps:
       - name: ActionView Test
+        if: ${{ job.status == 'success' }}
         run: |
           echo "Action view"
