--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,6 +113,7 @@ jobs:
   actioncable:
     if: ${{ always() }}
     needs: build
+    continue-on-error: ${{ matrix.experimental }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -139,6 +140,7 @@ jobs:
     if: ${{ always() }}
     needs: build
     runs-on: ubuntu-latest
+    continue-on-error: ${{ matrix.experimental }}
     strategy:
       fail-fast: false
       matrix:
