--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,7 +132,7 @@ jobs:
             experimental: true
     steps:
       - name: Action cable Test
-        continue-on-error: ${{ needs.build.result == 'success'}}
+        continue-on-error: ${{ matrix.ruby.experimental == true }}
         if: needs.build.result == 'success'
         run: echo "Action cable"
 
@@ -140,7 +140,6 @@ jobs:
     if: ${{ always() }}
     needs: build
     runs-on: ubuntu-latest
-    continue-on-error: ${{ matrix.experimental }}
     strategy:
       fail-fast: false
       matrix:
@@ -159,6 +158,6 @@ jobs:
             experimental: true
     steps:
       - name: ActionView Test
-        continue-on-error: ${{ needs.build.result == 'success'}}
+        continue-on-error: ${{ matrix.ruby.experimental == true }}
         if: needs.build.result == 'success'
         run: echo "Action view"
