--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,22 +19,6 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        experimental: [false]
-        ruby: ["2.7", "3.0", "3.1", "3.2"]
-        include:
-          - ruby: head
-            experimental: true
-          - ruby: jruby
-            experimental: true
-          - ruby: jruby-head
-            experimental: true
-          - ruby: truffleruby
-            experimental: true
-          - ruby: truffleruby-head
-            experimental: true
     services:
       mysql:
         image: mysql:latest
@@ -133,7 +117,6 @@ jobs:
 
   actionview:
     if: ${{ always() }}
-    needs: build
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -151,8 +134,8 @@ jobs:
             experimental: true
           - ruby: truffleruby-head
             experimental: true
+    needs: build
     steps:
       - name: ActionView Test
-        continue-on-error: ${{ matrix.ruby.experimental == true }}
-        if: needs.build.result == 'success'
+        if: ${{ job.status == 'success' && (matrix.experimental == 'false' || fromJSON(needs.build.outputs.matrix[matrix.job.ruby]).status != 'failure') }}
         run: echo "Action view"
