--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,25 +96,27 @@ jobs:
   actioncable:
     runs-on: ubuntu-latest
 
-    # strategy:
-    #   fail-fast: false
-    #   matrix:
-    #     experimental: [false]
-    #     ruby: ["2.7", "3.0", "3.1", "3.2"]
-    #     include:
-    #       - ruby: head
-    #         experimental: true
-    #       - ruby: jruby
-    #         experimental: true
-    #       - ruby: jruby-head
-    #         experimental: true
-    #       - ruby: truffleruby
-    #         experimental: true
-    #       - ruby: truffleruby-head
-    #         experimental: true
+    strategy:
+      fail-fast: false
+      matrix:
+        experimental: [false]
+        ruby: ["2.7", "3.0", "3.1", "3.2"]
+        include:
+          - ruby: head
+            experimental: true
+          - ruby: jruby
+            experimental: true
+          - ruby: jruby-head
+            experimental: true
+          - ruby: truffleruby
+            experimental: true
+          - ruby: truffleruby-head
+            experimental: true
     steps:
       - name: Build
         uses: ./.github/workflows/build
+        with:
+          ruby: ${{ matrix.ruby }}
       - name: Action cable Test
         # continue-on-error: ${{ matrix.ruby.experimental == true }}
         # if: needs.build.result == 'success'
@@ -123,25 +125,27 @@ jobs:
   actionview:
     # if: ${{ always() }}
     runs-on: ubuntu-latest
-    # strategy:
-    #   fail-fast: false
-    #   matrix:
-    #     experimental: [false]
-    #     ruby: ["2.7", "3.0", "3.1", "3.2"]
-    #     include:
-    #       - ruby: head
-    #         experimental: true
-    #       - ruby: jruby
-    #         experimental: true
-    #       - ruby: jruby-head
-    #         experimental: true
-    #       - ruby: truffleruby
-    #         experimental: true
-    #       - ruby: truffleruby-head
-    #         experimental: true
+    strategy:
+      fail-fast: false
+      matrix:
+        experimental: [false]
+        ruby: ["2.7", "3.0", "3.1", "3.2"]
+        include:
+          - ruby: head
+            experimental: true
+          - ruby: jruby
+            experimental: true
+          - ruby: jruby-head
+            experimental: true
+          - ruby: truffleruby
+            experimental: true
+          - ruby: truffleruby-head
+            experimental: true
     steps:
       - name: Build
         uses: ./.github/workflows/build
+        with:
+          ruby: ${{ matrix.ruby }}
       - name: ActionView Test
         # if: ${{ job.status == 'success' && (matrix.experimental == 'false' || fromJSON(needs.build.outputs.matrix[matrix.job.ruby]).status != 'failure') }}
         run: echo "Action view"
