--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,6 +113,8 @@ jobs:
           - ruby: truffleruby-head
             experimental: true
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: Build
         uses: ./.github/workflows/build
         with:
@@ -142,6 +144,8 @@ jobs:
           - ruby: truffleruby-head
             experimental: true
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: Build
         uses: ./.github/workflows/build
         with:
