--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Build
-        uses: build
+        uses: ./.github/workflows/build
         with:
           ruby: ${{ matrix.ruby }}
       - name: Action cable Test
@@ -68,7 +68,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Build
-        uses: build
+        uses: ./.github/workflows/build
         with:
           ruby: ${{ matrix.ruby }}
       - name: ActionView Test
