Fix checkout code

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,9 @@ jobs:
           --health-retries 3
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Set up Memcached
         uses: niden/actions-memcached@v7
 
