--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,8 +10,7 @@ jobs:
         ruby: ["2.7", "3.0", "3.1", "3.2"]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
       - name: Build
-        uses: ./.github/workflows/build.yml
+        uses: ./.github/actions/reusable
         with:
           ruby: ${{ matrix.ruby }}
