--- a/.github/actions/reusable/action.yml
+++ b/.github/actions/reusable/action.yml
@@ -14,6 +14,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run job 1
-        run: echo "${{ inputs.ruby_version }}"
+        run: echo ${{ inputs.ruby_version }}
       - name: Run job 2
         run: echo "Hello world"
