--- a/.github/actions/reusable/action.yml
+++ b/.github/actions/reusable/action.yml
@@ -23,6 +23,6 @@ jobs:
 
     steps:
       - name: Run job 1
-        run: echo ${{ github.event.inputs.ruby_version }}
+        run: echo ${{ inputs.ruby_version }}
       - name: Run job 2
         run: echo "Hello world"
