--- a/.github/actions/reusable/action.yml
+++ b/.github/actions/reusable/action.yml
@@ -3,7 +3,7 @@ name: Reusable
 on:
   workflow_call:
     inputs:
-      ruby_version:
+      ruby:
         description: 'Ruby version'
         required: true
         default: '2.7'
