--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Build
         uses: ./.github/actions/reusable
         with:
-          ruby_version: hello
+          ruby: ${{ matrix.ruby }}
