--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,6 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
       - name: Build
-        uses: ./.github/actions/reusable
+        uses: ./.github/workflows/work.yml
         with:
           ruby: ${{ matrix.ruby }}
