--- a/.github/actions/reusable/action.yml
+++ b/.github/actions/reusable/action.yml
@@ -3,19 +3,22 @@ name: Build
 on:
   workflow_call:
     inputs:
-      ruby:
+      name:
         description: 'Ruby version'
-        required: true
+        required: false
         default: '2.7'
         type: string
 
 jobs:
   reusable_workflow_job:
     runs-on: ubuntu-latest
-
+    strategy:
+      fail-fast: false
+      matrix:
+        ruby: ["2.7", "3.0", "3.1", "3.2"]
     steps:
       - name: Run job 1
-        run: echo ${{ inputs.ruby }}
+        run: echo ${{ matrix.ruby }}
       - name: Run job 2
         run: echo "Hello world"
       - name: sleep
