--- a/.github/actions/reusable/action.yml
+++ b/.github/actions/reusable/action.yml
@@ -1,24 +1,22 @@
-name: Build
+name: Reusable
 
 on:
   workflow_call:
     inputs:
-      name:
+      ruby:
         description: 'Ruby version'
-        required: false
+        required: true
         default: '2.7'
         type: string
 
 jobs:
   reusable_workflow_job:
+    name: 'Reusable build action'
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        ruby: ["2.7", "3.0", "3.1", "3.2"]
+
     steps:
       - name: Run job 1
-        run: echo ${{ matrix.ruby }}
+        run: echo ${{ inputs.ruby }}
       - name: Run job 2
         run: echo "Hello world"
       - name: sleep
