--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -5,22 +5,24 @@ on:
     inputs:
       ruby:
         description: 'Ruby version'
-        required: true
+        required: false
         default: '2.7'
         type: string
 
 jobs:
   reusable_workflow_job:
-    name: 'Reusable build action'
     runs-on: ubuntu-latest
-
+    strategy:
+      fail-fast: false
+      matrix:
+        ruby: ["2.7", "3.0", "3.1", "3.2"]
     steps:
       - name: Run job 1
-        run: echo "Hello ${{ inputs.ruby }}"
+        run: echo "Hello ${{ matrix.ruby }}"
       - name: Run job 2
-        run: echo "Hello ${{ inputs.ruby }}"
+        run: echo "Hello ${{ matrix.ruby }}"
       - name: Run job 3
-        run: echo "Hello ${{ inputs.ruby }}"
+        run: echo "Hello ${{ matrix.ruby }}"
       - name: sleep
         run: sleep 10s
         shell: bash
