allow continue on error:

--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -13,6 +13,7 @@ jobs:
   reusable_workflow_job:
     name: Build and test rails
     runs-on: ubuntu-latest
+    continue-on-error: ${{ matrix.experimental }}
     strategy:
       fail-fast: false
       matrix:
