--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,8 +4,35 @@ on: [push, pull_request]
 
 jobs:
   actioncable:
+    strategy:
+      fail-fast: false
+      matrix:
+        ruby: ["2.7", "3.0", "3.1", "3.2"]
+        include:
+          - ruby: head
+            experimental: true
     uses: ./.github/workflows/work.yml
+    with:
+      ruby: ${{ matrix.ruby }}
   guides:
+    strategy:
+      fail-fast: false
+      matrix:
+        ruby: ["2.7", "3.0", "3.1", "3.2"]
+        include:
+        - ruby: head
+          experimental: true
     uses: ./.github/workflows/work.yml
+    with:
+      ruby: ${{ matrix.ruby }}
   actionview:
+    strategy:
+      fail-fast: false
+      matrix:
+        ruby: ["2.7", "3.0", "3.1", "3.2"]
+        include:
+        - ruby: head
+          experimental: true
     uses: ./.github/workflows/work.yml
+    with:
+      ruby: ${{ matrix.ruby }}
