--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -13,28 +13,28 @@ jobs:
   reusable_workflow_job:
     name: Build and test rails
     runs-on: ubuntu-latest
-    continue-on-error: ${{ matrix.experimental }}
-    strategy:
-      fail-fast: false
-      matrix:
-        ruby: ["2.7", "3.0", "3.1", "3.2"]
-        experimental: [false]
-        include:
-          - ruby: head
-            experimental: true
+    # continue-on-error: ${{ matrix.experimental }}
+    # strategy:
+    #   fail-fast: false
+    #   matrix:
+    #     ruby: ["2.7", "3.0", "3.1", "3.2"]
+    #     experimental: [false]
+    #     include:
+    #       - ruby: head
+    #         experimental: true
     steps:
       - name: Run job 1
-        run: echo "Hello ${{ matrix.ruby }}"
+        run: echo "Hello ${{ inputs.ruby }}"
       - name: Run job 2
-        run: echo "Hello ${{ matrix.ruby }}"
-      - name: Run job 3
-        run: |
-          if [ "${{ matrix.experimental }}" = "true" ]; then
-            echo ":cry:"
-            exit 1
-          else
-            echo "Hello ${{ matrix.ruby }}"
-          fi
+        run: echo "Hello ${{ inputs.ruby }}"
+      # - name: Run job 3
+      #   run: |
+      #     if [ "${{ matrix.experimental }}" = "true" ]; then
+      #       echo ":cry:"
+      #       exit 1
+      #     else
+      #       echo "Hello ${{ matrix.ruby }}"
+      #     fi
       - name: sleep
         run: sleep 10s
         shell: bash
