--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,7 @@ jobs:
     uses: ./.github/workflows/work.yml
     with:
       ruby: ${{ matrix.ruby }}
+      experimental: ${{ matrix.experimental }}
   guides:
     strategy:
       fail-fast: false
@@ -25,6 +26,7 @@ jobs:
     uses: ./.github/workflows/work.yml
     with:
       ruby: ${{ matrix.ruby }}
+      experimental: ${{ matrix.experimental }}
   actionview:
     strategy:
       fail-fast: false
@@ -36,3 +38,4 @@ jobs:
     uses: ./.github/workflows/work.yml
     with:
       ruby: ${{ matrix.ruby }}
+      experimental: ${{ matrix.experimental }}
