--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,42 +3,28 @@ name: Rails tests
 on: [push, pull_request]
 
 jobs:
-  actioncable:
-    strategy:
-      fail-fast: false
-      matrix:
-        experimental: [false]
-        ruby: ["2.7", "3.0", "3.1", "3.2"]
-        include:
-          - ruby: head
-            experimental: true
+  ruby_2_7:
     uses: ./.github/workflows/build.yml
     with:
-      ruby: ${{ matrix.ruby }}
-      experimental: ${{ matrix.experimental }}
-  guides:
-    strategy:
-      fail-fast: false
-      matrix:
-        experimental: [false]
-        ruby: ["2.7", "3.0", "3.1", "3.2"]
-        include:
-        - ruby: head
-          experimental: true
+      ruby: 2.7
+      experimental: false
+  ruby_3_0:
     uses: ./.github/workflows/build.yml
     with:
-      ruby: ${{ matrix.ruby }}
-      experimental: ${{ matrix.experimental }}
-  actionview:
-    strategy:
-      fail-fast: false
-      matrix:
-        experimental: [false]
-        ruby: ["2.7", "3.0", "3.1", "3.2"]
-        include:
-        - ruby: head
-          experimental: true
+      ruby: 3.0
+      experimental: false
+  ruby_3_1:
     uses: ./.github/workflows/build.yml
     with:
-      ruby: ${{ matrix.ruby }}
-      experimental: ${{ matrix.experimental }}
+      ruby: 3.1
+      experimental: false
+  ruby_3_2:
+    uses: ./.github/workflows/build.yml
+    with:
+      ruby: 3.2
+      experimental: false
+  ruby_head:
+    uses: ./.github/workflows/build.yml
+    with:
+      ruby: head
+      experimental: true
