--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,14 +103,24 @@ jobs:
           bundle exec rake db:create
           bundle exec rake db:migrate
 
-  run_tests:
+  action_view:
     name: Run tests
     runs-on: ubuntu-latest
     needs: reusable_workflow_job
     steps:
       - name: Action view tests
         run: echo "Action view tests"
+  action_pack:
+    name: Run tests
+    runs-on: ubuntu-latest
+    needs: reusable_workflow_job
+    steps:
       - name: Action pack tests
         run: echo "Action pack tests"
+  action_cable:
+    name: Run tests
+    runs-on: ubuntu-latest
+    needs: reusable_workflow_job
+    steps:
       - name: Action cable tests
         run: echo "Action cable tests"
