--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,7 @@ on: [push, pull_request]
 
 jobs:
   test:
+    name: Rails tests on Ruby ${{ matrix.ruby }}
     strategy:
       fail-fast: false
       matrix:
