--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,7 +106,7 @@ jobs:
 
   run_tests:
     name: Run tests
-    runs-on: ubuntu-latest
+    runs-on: ${{ needs.reusable_workflow_job.runner.os }}
     needs: reusable_workflow_job
     strategy:
       matrix:
