--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: Rails tests
 on: [push, pull_request]
 
 jobs:
-  test:
+  build:
     name: Ruby ${{ matrix.ruby }}
     strategy:
       fail-fast: false
@@ -16,7 +16,20 @@ jobs:
     with:
       ruby: ${{ matrix.ruby }}
       experimental: false
-  # ruby_3_0:
+
+  test:
+    name: Ruby ${{ matrix.ruby }} ${{ matrix.framework }}
+    runs-on: ubuntu-latest
+    needs: build
+    strategy:
+      fail-fast: false
+      matrix:
+        framework: [actionpack, activerecord, actionview, actionmailer, activesupport, activemodel, activestorage, railties]
+
+    steps:
+      - name: Run tests
+        run: bundle exec rake test
+      # ruby_3_0:
   #   uses: ./.github/workflows/build.yml
   #   with:
   #     ruby: 3.0
