--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
       experimental: false
 
   test:
-    name: Ruby ${{ matrix.ruby }} ${{ matrix.framework }}
+    name: ${{ matrix.framework }}
     runs-on: ubuntu-latest
     needs: build
     strategy:
