--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,19 +104,19 @@ jobs:
           bundle exec rake db:create
           bundle exec rake db:migrate
 
-  # run_tests:
-  #   name: Run tests
-  #   needs: reusable_workflow_job
-  #   runs-on: ${{ needs.reusable_workflow_job.runner.os }}
-  #   strategy:
-  #     matrix:
-  #       framework: [actioncable, actionmailbox, actionmailer, actionpack, actiontext, actionview, activejob, activemodel, activerecord, activestorage, activesupport]
-  #   steps:
-  #     - name: ${{ matrix.framework }}
-  #       run: |
-  #         echo "Running ${{ matrix.framework }} tests"
-  #         sleep 10
-  #         bundle exec rake test
+  run_tests:
+    name: Run tests
+    needs: reusable_workflow_job
+    runs-on: ${{ needs.reusable_workflow_job.runner.id }}
+    strategy:
+      matrix:
+        framework: [actioncable, actionmailbox, actionmailer, actionpack, actiontext, actionview, activejob, activemodel, activerecord, activestorage, activesupport]
+    steps:
+      - name: ${{ matrix.framework }}
+        run: |
+          echo "Running ${{ matrix.framework }} tests"
+          sleep 10
+          bundle exec rake test
   # action_pack:
   #   name: Action pack tests
   #   runs-on: ubuntu-latest
