--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,11 +11,12 @@ jobs:
         experimental: [false]
         ruby: [2.7, 3.0, 3.1, 3.2]
         include:
-          - { experimental: true, ruby: 'head' }
+          - ruby: head
+            experimental: true
     uses: ./.github/workflows/build.yml
     with:
       ruby: ${{ matrix.ruby }}
-      experimental: false
+      experimental: ${{ matrix.experimental }}
 
   # test:
   #   name: ${{ matrix.framework }}
