--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,9 +10,9 @@ jobs:
       matrix:
         experimental: [false]
         ruby: [2.7, 3.0, 3.1, 3.2]
-        include:
-          - ruby: head
-            experimental: true
+        # include:
+        #   - ruby: head
+        #     experimental: true
     uses: ./.github/workflows/build.yml
     with:
       ruby: ${{ matrix.ruby }}
