--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,15 +4,11 @@ on:
   workflow_call:
 
 jobs:
-  actionview:
+  tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        framework: [actioncable, actionmailbox, actionmailer, actionpack, actiontext, actionview, activejob, activemodel, activerecord, activestorage, activesupport]
     steps:
-      - run: echo "actionview"
-  actionpack:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "actionpack"
-  railties:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "railties"
+      - name: ${{ matrix.framework }}
+        run: bundle exec rake test
